--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-wip.ipynb
-ben_encoder_env/
+# Personal often required
+docs/jupyter_execute/
 .vscode/
+###
+
 # hide this for now
-tiny.parquet
 *.bak
 .gitattributes
 .last_checked
@@ -15,6 +16,7 @@ _tmp*
 tmp*
 tags
 node_modules/
+*.parquet
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -80,7 +82,8 @@ instance/
 .scrapy
 
 # Sphinx documentation
-docs/_build/
+docs/_build/*
+!docs/_build/.nojekyll
 
 # PyBuilder
 target/
