--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ numpy = "^1.21"
 natsort = "^8"
 
 [tool.poetry.dev-dependencies]
-rasterio = "*"
+# rasterio = "*"
 black = "*"
 isort = "*"
 pytest = "*"
@@ -34,6 +34,7 @@ pre-commit = "*"
 myst-nb = "0.14"
 ipykernel = "*"
 linkify-it-py = "*"
+rasterio = {version = "^1.2.10", allow-prereleases = true}
 
 [tool.isort]
 profile = "black"
