Greatly simplify code-base and write documentation
- Use single abstract-base class to share code across all patch interface classes
- Add documentation that gives a more detailed summary on why the libary is a standalone library and how to use it
- Link to the actual BigEarthNet-Encoder documentation
- Add mypy tests for better testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,13 @@ sphinx-autobuild = "*"
 ipykernel = "*"
 linkify-it-py = "*"
 rasterio = {version = "^1.2.10", allow-prereleases = true}
+mypy = "*"
+autodoc-pydantic = "^1.7.1"
+
+[tool.mypy]
+exclude = ["tests"]
+# common plugins:
+# plugins = "numpy.typing.mypy_plugin"ypy = "^0.960"
 
 [tool.isort]
 profile = "black"
