--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install dependencies
         run: |
           just install
+      - name: Test mypy
+        run: |
+          mypy bigearthnet_patch_interface
       - name: Check precommit
         run: |
           source $VENV
