--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -1,3 +1,9 @@
 root: intro
 entries:
+  - file: api
+    subtrees:
+      - entries:
+          - file: api_s1
+          - file: api_s2
+          - file: api_merged
   - glob: "[0-9][0-9]_*"
