--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-
-        python-version: [ "3.8", "3.9", "3.10" ]
+        python-version: ["3.8","3.9","3.10"]
 
     runs-on: ubuntu-latest
     steps:
@@ -37,6 +36,10 @@ jobs:
         run: |
           source $VENV
           pre-commit run --all-files
+      - name: Test mypy
+        run: |
+          source $VENV
+          mypy bigearthnet_patch_interface
       - name: Run tests from within poetry
         run: |
           source $VENV
