--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,6 @@ on:
   pull_request:
     branches: [main]
 
-
 jobs:
   # Here I am assuming that the tests have been run on the PR
   # Otherwise it could be possible that a direct push to main
@@ -20,26 +19,15 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Set up Python and PDM
+        uses: pdm-project/setup-pdm@main
         with:
-
-          python-version: 3.8
-
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
-      - uses: extractions/setup-just@v1
+          python-version: "3.8"
       - name: Install dependencies
         run: |
-          just install
-      - name: Build documentation
-        run: |
-          source $VENV
-          just build
+          pdm sync --dev --group docs
+          pdm plugin add pdm-bump
+          pdm run build-docs
       # Must be run BEFORE GitHub Pages Deploy
       # as the GitHub Pages action would check out a different
       # branch; the error you would see is "no canary release available"
@@ -53,9 +41,6 @@ jobs:
         env:
           # To be able to trigger publish event
           GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
-
-
-
       # always deploy github-pages if pushed to main
       - name: Deploy 🚀
         if: ${{ github.event_name == 'push' }}
