--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -8,3 +8,6 @@ entries:
           - file: api_s2
           - file: api_merged
   - glob: "[0-9][0-9]_*"
+  - file: general/dependencies
+  - file: general/code_of_conduct
+  - file: general/license
